<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Field PTY</string>
    <string name="title_section1">Ligas</string>
    <string name="title_section2">My Team</string>
    <string name="title_section3">Scores</string>
    <string name="title_section4">Noticias</string>
    <string name="action_settings">Settings</string>
<!--     <string name="host_webservices">http://192.168.2.6:8989/thefieldpanama/services/app/</string> -->
    <string name="host_webservices">http://104.131.223.77:8080/thefieldpanama/services/app/</string>
    <string name="error_http_request">"No podemos actualizar la información, inténtelo más tarde"</string>
    <string name="data_actualizada">"Datos actualizados en %1$d mscs."</string>
    <string name="title_activity_first_tab_child">Detalles</string>
    <string name="no_hay_calendario">No existen partidos programados para esta categoria</string>
    <string name="detalle_partido">"Fecha: %1$s %2$s \nLugar: %3$s"</string>
    <string name="score_detail">%1$s %2$d Estado\n%3$s %4$d</string>
    <string name="title_activity_splashctivity">The Field PTY</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select_favs">Seleccionar favoritos</string>
    <string name="equipos_disponibles">Equipos disponibles</string>
    <string name="add">Añadir</string>
    <string name="del">Borrar</string>
    <string name="no_favs_del">Nada para borrar</string>
    <string name="favs_deleted">Borrado</string>
    <string name="add_remainder_msg">¿Deseas programar alarmas para eventos relacionados a %1$s?</string>
    <string name="rem_remainder_msg">¿Deseas desactivar las alarmas para %1$s?</string>
    <string name="set_alarms">Alarmas configuradas</string>
    <string name="unset_alarms">Alarmas para %1$s desactivadas</string>
    <string name="no_alarms">No hay alarmas para configurar</string>
    <string name="alarms_1">"Notificaciones"</string>
    <string name="alarms_2">"Habilite o inhabilite las notificaciones para los partidos"</string>
    <string name="alarms_3">"Activar notificaciones"</string>
    <string name="alarms_4">"Actualización de datos"</string>
    <string name="alarms_5">"Tiempo en que la aplicación buscará actualizaciones en el servidor"</string>
    <string name="alarms_6">"Configuracion de notificaciones"</string>
    <string name="alarms_7">"Periodo de actualización"</string>
    <string name="alarms_8">"Configure el tiempo de aviso antes del evento"</string>
    <string name="alarm_on">Alarmas activas</string>
    <string name="alarm_off">Alarmas inactivas</string>
    <string name="title_equipo">Equipo</string>
    <string name="title_grupo">"Grupo "</string>
    <string name="pj">PJ</string>
    <string name="pg">PG</string>
    <string name="pe">PE</string>
    <string name="pp">PP</string>
    <string name="pts">PTS</string>
    <string name="no_partidos_hoy">"No hay partidos el dia de hoy"</string>
    <string name="twitter_no_access">"No puedo acceder a Twitter"</string>
    <string name="no_actualizacion_act">"No pudo iniciarse servicio de actualizacion"</string>
    <string name="exit_question">¿Realmente quiere salir?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="tabla_no_dispon">"Tabla no disponible"</string>
    <string name="saved">Guardado</string>
    <string name="setup_alarms">"Programar alarmas"</string>
    <string name="title_activity_detalle_favorito">Info</string>

</resources>
